--- a/feretui/templates/feretui.tmpl
+++ b/feretui/templates/feretui.tmpl
@@ -5,6 +5,7 @@
         <meta charset=utf-8>
         <meta name=viewport content="width=device-width,initial-scale=1">
         <title>FeretUI</title>
+        <link rel="icon" type="image/png" href="{{feretui.get_image_url('logo.png')}}">
         {% for css in feretui.css_import %}
         <link rel="stylesheet" href="{{css}}" />
         {% endfor %}
