--- a/feretui/templates/menus.tmpl
+++ b/feretui/templates/menus.tmpl
@@ -21,7 +21,7 @@
       <div class="navbar-dropdown">
         {% for child in children %}
           {% if child.is_visible(session) %}
-            {{ child.render(feretui, session) | safe }}
+            {{ child.render(feretui, session) }}
           {% endif %}
         {% endfor %}
       </div>
@@ -32,6 +32,36 @@
   </template>
   <template id="toolbar-url-menu">
     <a class="navbar-item" href="{{ url }}">
+      <include template="feretui-icon" />
+      <strong>{{ label }}</strong>
+      <include template="feretui-tooltip" />
+    </a>
+  </template>
+  <template id="toolbar-button-menu">
+    <a 
+      class="button {{ css_class }}"
+      hx-get="{{ url }}"
+      hx-target="#feretui-body"
+      hx-swap="innerHTML"
+    >
+      <include template="feretui-icon" />
+      <strong>{{ label }}</strong>
+      <include template="feretui-tooltip" />
+    </a>
+  </template>
+  <template id="toolbar-buttons-menu">
+    <div class="navbar-item">
+      <div class="buttons">
+        {% for child in children %}
+          {% if child.is_visible(session) %}
+            {{ child.render(feretui, session) }}
+          {% endif %}
+        {% endfor %}
+      </div>
+    </div>
+  </template>
+  <template id="toolbar-button-url-menu">
+    <a class="button {{ css_class }}" href="{{ url }}">
       <include template="feretui-icon" />
       <strong>{{ label }}</strong>
       <include template="feretui-tooltip" />
@@ -59,7 +89,7 @@
       <ul>
         {% for child in children %}
           {% if child.is_visible(session) %}
-            <li>{{ child.render(feretui, session) | safe }}</li>
+            <li>{{ child.render(feretui, session) }}</li>
           {% endif %}
         {% endfor %}
       </ul>
