--- a/feretui/templates/feretui.tmpl
+++ b/feretui/templates/feretui.tmpl
@@ -147,4 +147,32 @@
       {% endif %}
     </div>
   </template>
+  <template id="feretui-radio-field">
+    <div class="field">
+      <label for="{{ label.field_id }}" class="label">
+        {{ label.text }}
+        {% if required %}
+        <span class="content is-small">
+        (
+          <span class="has-text-link">
+            required
+          </span>
+        )
+        </span>
+        {% endif %}
+        <include template="feretui-tooltip" />
+      </label>
+      <div class="control">
+        {{ widget }}
+      </div>
+      {% if errors %}
+      <p class="help is-danger">
+        {{ errors | join(', ')  }}
+      </p>
+      {% endif %}
+    </div>
+  </template>
+  <template id="feretui-radio-option">
+    <span>{{ widget }}</span>
+  </template>
 </templates>
