--- a/feretui/templates/pages.tmpl
+++ b/feretui/templates/pages.tmpl
@@ -87,16 +87,16 @@
       <div class="container">
         <h1 class="title">Register a new user</h1>
         <div id="feretui-signup-field-login">
-          {{ form.login(autocomplete="username") }}
+          {{ form.login(autocomplete='username') }}
         </div>
         <div id="feretui-signup-field-lang">
           {{ form.lang }}
         </div>
         <div id="feretui-signup-field-password">
-          {{ form.password(autocomplete="current-password") }}
+          {{ form.password(autocomplete='current-password') }}
         </div>
         <div id="feretui-signup-field-password2">
-          {{ form.password_confirm(autocomplete="current-password") }}
+          {{ form.password_confirm(autocomplete='current-password') }}
         </div>
         <br/>
         <div class="buttons">
